syntax = "proto3";

package auth.v1;

import "buf/validate/validate.proto";
import "auth/v1/common.proto";

message SignInRequest {
  string email = 1 [(buf.validate.field).string.email = true];
  string password = 2;
}

message SignInResponse {
  string user_id = 1 [(buf.validate.field).string.len = 26];
  auth.v1.Tokens tokens = 2;
}

message RefreshRequest {
  optional string refresh_token = 1 [(buf.validate.field).string.min_len = 1];
}

message RefreshResponse {
  auth.v1.Tokens tokens = 1;
}

message SignOutRequest {
  string access_token = 1 [(buf.validate.field).string.min_len = 1];
  string refresh_token = 2 [(buf.validate.field).string.min_len = 1];
}

message SignOutResponse {}

service SessionService {
  rpc SignIn(SignInRequest) returns (SignInResponse) {}
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
  rpc SignOut(SignOutRequest) returns (SignOutResponse) {}
}
